# custom-labels

./: .gitignore  Cargo.toml  GOVERNANCE.md  Makefile  README.md  binding.gyp  build.js  build.rs  custom-labels-v0.md  dlist  package.json  tsconfig.json
.github/workflows/: test-hashmap.yml
examples/: custom_labels_spin.rs  md.rs  spin.rs
js/: README.md  addon.c  addon.cpp  addon.h  addon2.cpp  addon_node.c  binding.gyp  index.d.ts  index.js  package.json
src/: custom_labels_adapter.rs  customlabels.c  customlabels.cpp  customlabels.h  hashmap.c  hashmap.h  lib.c  lib.h  lib.rs  otel_process_ctx.rs  otel_thread_ctx.rs  test_hashmap.c  tracing.rs  util.h
