[package]
name = "otel-thread-ctx"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["profiling", "pprof"]
description = "Provides a mechanism for OpenTelemetry SDKs to publish thread-level attributes for out-of-process readers such as the OpenTelemetry eBPF profilers"
repository = "https://github.com/open-telemetry/sig-profiling"
readme = "README.md"

[build-dependencies]
cc = "1.0"
prost-build = "0.13"
protoc-bin-vendored = "3.0"

[dev-dependencies]
rand = "0.8.5"
serial_test = "3.2"

[dependencies]
anyhow = "1.0"
prost = "0.13"
rustix = { version = "1.1", features = ["param", "mm", "process", "fs", "time"] }
