[package]
name = "otel-thread-ctx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["profiling", "pprof", "polarsignals", "parca"]
description = "Provides a mechanism for OpenTelemetry SDKs to publish thread-level attributes for out-of-process readers such as the OpenTelemetry eBPF profilers. This library is intended to serve as a temporary example to support initial implementations."
homepage = "https://polarsignals.com"
repository = "https://github.com/polarsignals/custom-labels"
readme = "README.md"

[build-dependencies]
cc = "1.2"
prost-build = "0.14"
protoc-bin-vendored = "3.2"

[dev-dependencies]
rand = "0.10"
serial_test = "3.4"

[dependencies]
anyhow = "1.0"
libc = "0.2"
pin-project-lite = "0.2"
prost = "0.14"
rustix = { version = "1.1", features = ["param", "mm", "process", "fs", "time"] }
